Start Keycloak process